Version 2022.7.2 (2022-07-10)
- Ignore further parameters by device
- Allign enity naming to HA entity name

Version 2022.7.1 (2022-07-07)
- Better distinguish between NO_CACHE_ENTRY and None

Version 2022.7.0 (2022-07-07)
- Switch to calendar versioning for hahomematic

Version 1.9.4 (2022-07-03)
- Load MASTER data on initial load

Version 1.9.3 (2022-07-02)
- Fix export of device definitions

Version 1.9.2 (2022-07-01)
- Use CHANNEL_OPERATION_MODE for devices with MULTI_MODE_INPUT_TRANSMITTER, KEY_TRANSCEIVER channels
- Readd HmIPW-FIO6 to custom device handling

Version 1.9.1 (2022-06-29)
- Remove HmIPW-FIO6 from custom device handling

Version 1.9.0 (2022-06-09)
- Refactor entity name creation
- Cleanup entity selection
- Add button to virtual remote

Version 1.8.6 (2022-06-07)
 - Code cleanup

Version 1.8.5 (2022-06-06)
 - Remove sysvars if deleted from CCU
 - Add check for sysvar type in sensor
 - Remove unused sysvar attributes
 - Refactor EntityDefinition

Version 1.8.4 (2022-06-04)
- Refactor all sysvar script
- Use ext_marker script in combination with SysVar.getAll

Version 1.8.3 (2022-06-04)
- Refactor sysvar creation eventing

Version 1.8.2 (2022-06-03)
- Fix build

Version 1.8.1 (2022-06-03)
- Use marker in sysvar description for extended sysvars

Version 1.8.0 (2022-06-02)
- Enable additional sysvar entity types

Version 1.7.3 (2022-06-01)
- Add more debug logging

Version 1.7.2 (2022-06-01)
- Better differentiate between float and int for sysvars
- Switch from # as unit placeholder for sysvars to ' '
- Move sysvar length check to sensor

Version 1.7.1 (2022-05-31)
- Rename parameter channel_address to address for put/get_paramset

Version 1.7.0 (2022-05-31)
- Refactor system variables
- Add more types for sysvar entities

Version 1.6.2 (2022-05-30)
- Add more options for boolean conversions

Version 1.6.1 (2022-05-29)
- Fix entity definition for HMIP-HEATING

Version 1.6.0 (2022-05-29)
- Add impulse event